// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/select_team/components/SelectTeamItem should match snapshot, on loading 1`] = `
<div
  className="signup-team-dir"
>
  <a
    className=""
    href="#"
    id="team_display_name"
    onClick={[Function]}
  >
    <span
      className="signup-team-dir__name"
    >
      team_display_name
    </span>
    <span
      className="fa fa-refresh fa-spin right signup-team__icon"
      title="Loading Icon"
    />
  </a>
</div>
`;

exports[`components/select_team/components/SelectTeamItem should match snapshot, on private joinable 1`] = `
<div
  className="signup-team-dir"
>
  <a
    className=""
    href="#"
    id="team_display_name"
    onClick={[Function]}
  >
    <span
      className="signup-team-dir__name"
    >
      team_display_name
    </span>
    <i
      className="fa fa-lock light"
      title="Private team"
    />
    <span
      className="fa fa-angle-right right signup-team__icon"
      title="Join Team Icon"
    />
  </a>
</div>
`;

exports[`components/select_team/components/SelectTeamItem should match snapshot, on private not joinable 1`] = `
<div
  className="signup-team-dir"
>
  <a
    className="disabled"
    href="#"
    id="team_display_name"
  >
    <span
      className="signup-team-dir__name"
    >
      team_display_name
    </span>
    <i
      className="fa fa-lock light"
      title="Private team"
    />
  </a>
</div>
`;

exports[`components/select_team/components/SelectTeamItem should match snapshot, on public joinable 1`] = `
<div
  className="signup-team-dir"
>
  <a
    className=""
    href="#"
    id="team_display_name"
    onClick={[Function]}
  >
    <span
      className="signup-team-dir__name"
    >
      team_display_name
    </span>
    <span
      className="fa fa-angle-right right signup-team__icon"
      title="Join Team Icon"
    />
  </a>
</div>
`;

exports[`components/select_team/components/SelectTeamItem should match snapshot, on public not joinable 1`] = `
<div
  className="signup-team-dir"
>
  <a
    className="disabled"
    href="#"
    id="team_display_name"
  >
    <span
      className="signup-team-dir__name"
    >
      team_display_name
    </span>
  </a>
</div>
`;

exports[`components/select_team/components/SelectTeamItem should match snapshot, with description 1`] = `
<div
  className="signup-team-dir"
>
  <WithTooltip
    title="description"
  >
    <TeamInfoIcon
      className="icon icon--info"
    />
  </WithTooltip>
  <a
    className=""
    href="#"
    id="team_display_name"
    onClick={[Function]}
  >
    <span
      className="signup-team-dir__name"
    >
      team_display_name
    </span>
    <span
      className="fa fa-angle-right right signup-team__icon"
      title="Join Team Icon"
    />
  </a>
</div>
`;
